--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    
+
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -397,7 +397,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script>
+    <script type="text/javascript">
       // Get the current year for copyright
       $("#year").text(new Date().getFullYear());
 
