--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           $('html, body').animate({
             scrollTop: $(hash).offset().top
           }, 800, function(){
-            window.location.hash = hash;
+            window.location.href = hash;
           });
         }
       });
